tic-tac-toe/css/TicTacToe.css
.game-content {
  padding: 5% 0 10% 0;
  margin: 50px auto 0 auto;
  width: 80%;
}

#gameboard {
  padding-top: 10px;
  width: 300px;
  margin: auto;
}

/*this is for drawing the 'X' of svg class*/
.crosses {
  stroke: rgb(108, 90, 73);
  fill: none;
  stroke-width: 8px;
}

/*this is for drawing the 'O' of svg class*/
.noughts {
  stroke: rgb(155, 197, 157);
  fill: none;
  stroke-width: 8px;
}

/* get the writing feeling for svg */
@keyframes svg-write-ani {
  to {
    stroke-dashoffset: 0;
  }
}

path {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: svg-write-ani 0.5s linear forwards;
}

/*
    this is to make sure the '/' part of 'X' doesn't start the same time as '\'
    doing this gives a nice 'writing' feeling
*/
path:nth-of-type(2n) {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: svg-write-ani 0.5s linear 0.3s forwards;
}

#gameboard table {
  margin-bottom: 0px;
}

#gameboard td {
  height: 96px;
  width: 96px;
}

#messageboard {
  margin-bottom: 2%;;
}

.table td {
  border-top-width: 0px;
  cursor: default;
  outline: none;
  /* border-top: solid 4px; */
}

table {
  border-collapse: collapse;
}
table td {
  border: 5px solid black;
}
table tr:first-child td {
  border-top: 0;
}
table tr td:first-child {
  border-left: 0;
}
table tr:last-child td {
  border-bottom: 0;
}
table tr td:last-child {
  border-right: 0;
}

.c_row_2 {
  border-left: 0px;
  border-right: 0px;
  border-top: solid 4px;
  border-bottom: solid 4px;
  border-color: #000000;
  border-width: 4px;
}

.c_col_2 {
  border-left: solid 4px;
  border-right: solid 4px;
  border-top: 0px;
  border-bottom: 0px;
  border-color: #000000;
  border-width: 4px;
}

@keyframes rotater {
  0% {
    transform: scale(0);
    opacity: 0;
  }
  20% {
    transform: scale(0.2);
    opacity: 0.2;
  }
  30% {
    transform: scale(0.3);
    opacity: 0.3;
  }
  40% {
    transform: scale(0.4);
    opacity: 0.4;
  }
  50% {
    transform: scale(0.5);
    opacity: 0.5;
  }
  60% {
    transform: scale(0.6);
    opacity: 0.6;
  }
  70% {
    transform: scale(0.7);
    opacity: 0.7;
  }
  80% {
    transform: scale(0.8);
    opacity: 0.8;
  }
  90% {
    transform: scale(0.9);
    opacity: 0.9;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

#gameboard span {
  position: absolute;
  left: 65px;
  top: 220px;
}

.source {
  position: fixed;
  bottom: 4%;
  width: 100%;
  text-align: center;
}

.backNav {
  position: fixed;
  bottom: 5%;
  width: 100%;
  text-align: center;
}

.lost {
  background-color: rgb(255, 82, 27);
}

.won {
  background-color: rgb(0, 149, 73);
}

